plugins {
	id 'java'
	id 'org.springframework.boot' version '4.1.0'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.bookshop'
version = '0.0.1-SNAPSHOT'
description = 'Manages the books in the catalog'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(26)
	}

}

repositories {
	mavenCentral()
}

def springCloudVersion = "2025.1.2"
def OpenTelemetryVersion= "2.28.1-alpha"


dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-flyway'
	implementation 'org.flywaydb:flyway-database-postgresql'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.cloud:spring-cloud-starter-stream-rabbit'
	implementation 'org.springframework.boot:spring-boot-starter-cache'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-opentelemetry'
	implementation 'org.springframework.boot:spring-boot-starter-security-oauth2-resource-server'
	implementation "io.opentelemetry.instrumentation:opentelemetry-logback-appender-1.0:$OpenTelemetryVersion"
	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	testImplementation 'org.springframework.boot:spring-boot-starter-data-jdbc-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-validation-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-actuator-test'
	testImplementation 'org.springframework.cloud:spring-cloud-stream-test-binder'
	testImplementation 'org.springframework.boot:spring-boot-starter-cache-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-data-redis-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-opentelemetry-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-security-oauth2-resource-server-test'
	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
	testImplementation 'org.testcontainers:testcontainers-junit-jupiter'
	testImplementation 'org.testcontainers:testcontainers-postgresql'
	testImplementation 'org.springframework.boot:spring-boot-starter-flyway-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:$springCloudVersion"
	}
}

tasks.withType(JavaCompile).configureEach {
	options.compilerArgs += ['--enable-preview']
}

tasks.withType(Test).configureEach {
	jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec).configureEach {
	jvmArgs += "--enable-preview"
}

tasks.named('bootRun') {
	systemProperty 'spring.profiles.active' , 'testdata'
}


tasks.named('bootBuildImage') {
    imageName = "${project.name}"
	environment = [
			'BP_JVM_VERSION' : '26.*',
			"BPE_DELIM_JAVA_TOOL_OPTIONS" : " ",
			"BPE_APPEND_JAVA_TOOL_OPTIONS": "--enable-preview"
	]

}

tasks.named('test') {
	useJUnitPlatform()
}
